[gd_scene load_steps=6 format=3 uid="uid://bfy23ob72fxrs"]

[ext_resource type="PackedScene" uid="uid://dtc4e16o2l3bu" path="res://Models/enemy.glb" id="1_02kka"]
[ext_resource type="PackedScene" uid="uid://l0lci7vh8o5p" path="res://Nodes/Gun.tscn" id="2_abj5j"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="2_hrcg6"]
[ext_resource type="PackedScene" uid="uid://bmhfbgeuis7hx" path="res://Models/Pistol_Full_West.glb" id="4_02yde"]
[ext_resource type="PackedScene" uid="uid://bbs0lre55ja1f" path="res://Models/Rifle_Battle_West.glb" id="5_yu0gr"]

[node name="Enemy" instance=ExtResource("1_02kka")]
script = ExtResource("2_hrcg6")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(0.349805, 0.0371156, -89.1878)
bones/0/rotation = Quaternion(-0.692144, -0.38804, 0.253107, 0.553443)
bones/1/position = Vector3(-9.53674e-07, 10.7299, -1.09031)
bones/1/rotation = Quaternion(0.0525788, -0.000293396, 0.0483808, 0.997444)
bones/2/rotation = Quaternion(0.0949048, 0.00550329, 0.042248, 0.994574)
bones/3/rotation = Quaternion(0.125009, 0.00930105, 0.0411669, 0.991258)
bones/4/position = Vector3(-4.47035e-06, 16.1777, 8.36535e-06)
bones/4/rotation = Quaternion(0.0725315, 0.0486093, 0.00189574, 0.996179)
bones/5/rotation = Quaternion(-0.000812345, 0.319378, -0.0540287, 0.946085)
bones/7/position = Vector3(6.80218, 14.5842, -0.154059)
bones/7/rotation = Quaternion(-0.708363, -0.358764, 0.419701, -0.43973)
bones/8/position = Vector3(3.78292e-06, 14.2808, -6.83598e-07)
bones/8/rotation = Quaternion(0.331209, -0.341525, 0.0138097, 0.879472)
bones/9/position = Vector3(-1.06127e-06, 23.1803, -4.02119e-06)
bones/9/rotation = Quaternion(0.747885, -0.386887, 0.456518, 0.287365)
bones/10/position = Vector3(1.24895e-05, 25.2709, 1.57061e-05)
bones/10/rotation = Quaternion(-0.191239, -0.300892, 0.143304, 0.923231)
bones/11/position = Vector3(-3.01791, 3.39407, 1.37123)
bones/11/rotation = Quaternion(0.23734, 0.066, 0.129175, 0.960535)
bones/12/position = Vector3(-0.645943, 3.74001, 2.10606e-06)
bones/12/rotation = Quaternion(0.00570526, -0.00330541, -0.0281961, 0.999581)
bones/13/position = Vector3(0.0616877, 3.31295, 1.07947e-05)
bones/13/rotation = Quaternion(-0.138639, -0.0665822, 0.30695, 0.939217)
bones/14/position = Vector3(0.584239, 2.58979, -2.14577e-06)
bones/15/position = Vector3(-3.63741, 10.5697, 0.0969019)
bones/15/rotation = Quaternion(0.167517, 0.0910839, 0.0412311, 0.980786)
bones/16/position = Vector3(0.0158322, 3.05465, 1.14819e-05)
bones/16/rotation = Quaternion(0.244812, -0.000270205, -0.0360003, 0.968902)
bones/17/position = Vector3(-0.00727582, 3.03952, -3.89834e-06)
bones/17/rotation = Quaternion(0.24559, 0.000680131, -0.0328415, 0.968817)
bones/19/position = Vector3(-1.05067, 10.5765, -0.192574)
bones/19/rotation = Quaternion(0.166496, 0.096947, 0.0447381, 0.980244)
bones/20/position = Vector3(0.0178753, 3.50016, -3.05908e-06)
bones/20/rotation = Quaternion(0.386828, 0.000161964, -0.056226, 0.920436)
bones/21/position = Vector3(-0.0201732, 3.27508, -1.39467e-06)
bones/21/rotation = Quaternion(0.371063, 0.0011326, -0.0456958, 0.927482)
bones/22/position = Vector3(0.00229114, 2.95613, -2.89083e-06)
bones/23/position = Vector3(1.25329, 10.74, -0.254797)
bones/23/rotation = Quaternion(0.146446, 0.0121077, 0.0405295, 0.988314)
bones/24/position = Vector3(-0.0103419, 2.84327, -5.27168e-06)
bones/24/rotation = Quaternion(0.561004, 0.00251291, -0.0821396, 0.823724)
bones/25/position = Vector3(-0.0152619, 2.75189, -2.20486e-06)
bones/25/rotation = Quaternion(0.281039, 0.0185422, -0.0977066, 0.954529)
bones/26/position = Vector3(0.0256031, 2.29949, -3.0715e-06)
bones/27/position = Vector3(3.43479, 9.64603, -0.0739639)
bones/27/rotation = Quaternion(0.051811, -0.0738935, 0.0376269, 0.995208)
bones/28/position = Vector3(-0.00136316, 2.63428, -2.15037e-06)
bones/28/rotation = Quaternion(0.430877, 0.00131834, -0.0651685, 0.900054)
bones/29/position = Vector3(-0.0140804, 2.23286, -1.87264e-05)
bones/29/rotation = Quaternion(0.272701, -0.000462555, -0.0325167, 0.961549)
bones/30/position = Vector3(0.01544, 1.78888, -7.15256e-07)
bones/31/rotation = Quaternion(0.612482, -0.480618, 0.423748, 0.462936)
bones/32/position = Vector3(1.18532e-05, 14.2808, -1.20547e-06)
bones/32/rotation = Quaternion(0.192516, -0.0833349, -0.349808, 0.913032)
bones/33/position = Vector3(2.1542e-06, 23.1804, -6.98622e-06)
bones/33/rotation = Quaternion(0.219462, 0.166497, -0.876116, 0.395647)
bones/34/position = Vector3(-4.52783e-06, 25.2712, -6.93936e-06)
bones/34/rotation = Quaternion(-0.134725, 0.0682075, 0.146835, 0.977567)
bones/35/position = Vector3(2.93964, 3.37807, 1.29254)
bones/35/rotation = Quaternion(0.179478, -0.198502, -0.152548, 0.951375)
bones/36/position = Vector3(0.626388, 3.6757, 5.90798e-06)
bones/36/rotation = Quaternion(-0.0032608, 0.0204937, 0.116444, 0.99298)
bones/37/position = Vector3(0.0517073, 3.41285, -1.98924e-06)
bones/37/rotation = Quaternion(-0.144762, 0.0165483, 0.0961582, 0.984644)
bones/38/position = Vector3(-0.678091, 2.72091, 5.84126e-06)
bones/39/position = Vector3(3.57558, 10.5957, 0.108991)
bones/39/rotation = Quaternion(0.037742, -0.00241641, -0.00306934, 0.99928)
bones/40/rotation = Quaternion(0.100348, 5.77812e-05, 0.0135638, 0.99486)
bones/41/position = Vector3(0.00662565, 2.95661, 9.72085e-06)
bones/41/rotation = Quaternion(0.287968, -0.000781009, 0.029556, 0.957183)
bones/42/position = Vector3(0.00860023, 2.57242, 5.1856e-06)
bones/43/position = Vector3(1.10391, 10.4521, -0.129126)
bones/43/rotation = Quaternion(-0.00315324, -0.0315825, 0.0498973, 0.99825)
bones/44/position = Vector3(-0.0241421, 3.45699, 6.11287e-06)
bones/44/rotation = Quaternion(0.779276, 0.00143036, 0.0804457, 0.621495)
bones/45/position = Vector3(0.0100618, 3.35315, -6.30378e-06)
bones/45/rotation = Quaternion(0.579933, -0.0022025, 0.0581948, 0.81258)
bones/46/position = Vector3(0.014066, 2.96797, -1.22339e-05)
bones/47/position = Vector3(-1.28102, 10.7278, -0.269794)
bones/47/rotation = Quaternion(0.0888416, 0.116262, 0.0516599, 0.987887)
bones/48/position = Vector3(0.00852364, 2.89773, 5.27833e-06)
bones/48/rotation = Quaternion(0.833988, -0.00253231, 0.0955162, 0.543447)
bones/49/position = Vector3(0.00857512, 2.73273, -3.19918e-06)
bones/49/rotation = Quaternion(0.630967, 0.00151827, 0.0682973, 0.772796)
bones/50/position = Vector3(-0.0171026, 2.31146, -2.17557e-06)
bones/51/position = Vector3(-3.39853, 9.46554, 0.0374083)
bones/51/rotation = Quaternion(0.0427169, 0.156687, 0.0328953, 0.986176)
bones/52/position = Vector3(-0.00620282, 2.60614, -6.5461e-06)
bones/52/rotation = Quaternion(0.727977, -0.00164371, 0.0813749, 0.680753)
bones/53/position = Vector3(0.0167519, 2.28164, 2.44383e-06)
bones/53/rotation = Quaternion(0.622372, -0.00067568, 0.0617865, 0.780279)
bones/54/position = Vector3(-0.0105506, 1.92128, -1.07288e-05)
bones/55/rotation = Quaternion(0.133509, 0.101133, 0.967915, -0.187316)
bones/56/rotation = Quaternion(-0.274598, -0.111523, 0.0063947, 0.955049)
bones/57/rotation = Quaternion(0.468696, -0.0227197, -0.0299799, 0.882558)
bones/58/rotation = Quaternion(0.328084, -0.0710657, 0.0263644, 0.941603)
bones/60/rotation = Quaternion(-0.213773, 0.00716995, 0.970031, 0.115284)
bones/61/rotation = Quaternion(-0.281738, 0.0124629, -0.00939217, 0.959364)
bones/62/rotation = Quaternion(0.561669, 0.0130513, 0.043266, 0.826127)
bones/63/rotation = Quaternion(0.295445, 0.0892599, -0.000323606, 0.951181)

[node name="righthand" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(-0.184194, 0.0835751, 0.97933, -0.199492, 0.972461, -0.120509, -0.962432, -0.217565, -0.162449, -19.4165, 0.893698, -127.572)
bone_name = "mixamorig_RightHand"
bone_idx = 34

[node name="Pistol_Full_West2" parent="Armature/Skeleton3D/righthand" index="0" instance=ExtResource("4_02yde")]
transform = Transform3D(15.5427, 96.2433, 22.2632, 4.91087, 21.7564, -97.481, -98.6626, 16.2445, -1.34487, 4.96468, 12.0025, 2.40271)

[node name="Rifle_Battle_West2" parent="Armature/Skeleton3D/righthand" index="1" instance=ExtResource("5_yu0gr")]
transform = Transform3D(14.8703, 96.2433, 22.7179, 7.82267, 21.7564, -97.2906, -98.5783, 16.2445, -4.29359, 3.25519, 19.2201, 1.94936)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="2"]
transform = Transform3D(0.93844, -0.336569, -0.0777942, 0.141613, 0.169417, 0.975317, -0.315082, -0.926293, 0.20665, -5.86841, -0.300658, -146.11)
bone_name = "mixamorig_Head"
bone_idx = 5

[node name="Gun" parent="Armature/Skeleton3D/BoneAttachment3D" index="0" instance=ExtResource("2_abj5j")]
transform = Transform3D(-93.7947, 31.5515, -14.3892, 33.742, 92.6104, -16.8755, 8.00147, -20.6835, -97.5098, -1.01406, -2.08833, 8.28689)

[node name="sight1" type="RayCast3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="1"]
transform = Transform3D(93.844, 31.5082, 14.1612, -33.6569, 92.6293, 16.9417, -7.77944, -20.665, 97.5317, -3.43857, -28.3484, 5.73178)
target_position = Vector3(0, 0, 25)
debug_shape_custom_color = Color(0, 1, 1, 1)

[node name="sight2" type="RayCast3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="2"]
transform = Transform3D(92.275, 31.5082, -22.1936, -24.8077, 92.6293, 28.3617, 29.4941, -20.665, 93.2902, -3.43858, -28.3484, 5.73178)
target_position = Vector3(0, 0, 25)
debug_shape_custom_color = Color(0, 1, 1, 1)

[node name="sight5" type="RayCast3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="3"]
transform = Transform3D(94.8874, 31.5082, -1.90095, -30.3099, 92.6293, 22.3857, 8.81416, -20.665, 97.4437, -3.43858, -28.3484, 5.73178)
target_position = Vector3(0, 0, 25)
debug_shape_custom_color = Color(0, 1, 1, 1)

[node name="sight3" type="RayCast3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="4"]
transform = Transform3D(85.466, 31.5082, 41.2649, -37.1605, 92.6293, 6.23726, -36.2582, -20.665, 90.8752, -3.43858, -28.3484, 5.73178)
target_position = Vector3(0, 0, 25)
debug_shape_custom_color = Color(0, 1, 1, 1)

[node name="sight4" type="RayCast3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="5"]
transform = Transform3D(90.9479, 31.5082, 27.1237, -35.6925, 92.6293, 12.0771, -21.3192, -20.665, 95.4905, -3.43858, -28.3484, 5.73177)
target_position = Vector3(0, 0, 25)
debug_shape_custom_color = Color(0, 1, 1, 1)
